--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 80,
-	"tabWidth": 4
+	"trailingComma": "none"
 }
