--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
 	"scripts": {
 		"build": "tsup",
 		"lint": "tsc",
+		"test": "vitest",
 		"format": "prettier --write .",
 		"ci:version": "changeset version",
 		"ci:release": "changeset publish"
 	},
 	"peerDependencies": {
-		"pocketbase": "^0.21.0"
+		"pocketbase": "0.22.0-rc"
 	},
 	"dependencies": {
 		"sade": "^1.8.1"
@@ -39,9 +40,10 @@
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
 		"@types/node": "^20.11.13",
-		"pocketbase": "^0.21.0",
+		"pocketbase": "0.22.0-rc",
 		"prettier": "^3.2.4",
 		"tsup": "^8.0.1",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"vitest": "^2.1.2"
 	}
 }
