--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"ci:release": "changeset publish"
 	},
 	"peerDependencies": {
-		"pocketbase": "^0.21.0"
+		"pocketbase": "0.22.0-rc"
 	},
 	"dependencies": {
 		"sade": "^1.8.1"
@@ -39,7 +39,7 @@
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
 		"@types/node": "^20.11.13",
-		"pocketbase": "^0.21.0",
+		"pocketbase": "0.22.0-rc",
 		"prettier": "^3.2.4",
 		"tsup": "^8.0.1",
 		"typescript": "^5.3.3"
