--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "typed-pocketbase",
+	"name": "@tigawanna/typed-pocketbase",
 	"version": "0.0.1",
 	"description": "Add types to the PocketBase JavaScript SDK",
 	"author": "Tigawanna",
