--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"ci:release": "changeset publish"
 	},
 	"peerDependencies": {
-		"pocketbase": "0.22.0-rc"
+		"pocketbase": "^0.22.0-rc"
 	},
 	"dependencies": {
 		"sade": "^1.8.1"
@@ -40,6 +40,7 @@
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
 		"@types/node": "^20.11.13",
+		"dotenv": "^16.4.5",
 		"pocketbase": "0.22.0-rc",
 		"prettier": "^3.2.4",
 		"tsup": "^8.0.1",
