fix: correct array type generation for singular select and relation fields
Previously, the type generation was incorrectly creating array types for
singular select and relation fields when maxSelect was 1 or 0. This fix
ensures that:

- Single select fields (maxSelect = 1 or 0) generate scalar types instead of arrays
- Single relation fields (maxSelect = 1 or 0) generate string types instead of string arrays
- Multi-select fields continue to generate proper array types
- File field type generation remains consistent with the pattern

This resolves type accuracy issues and improves developer experience when
working with PocketBase collections that have singular select/relation fields.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"ci:version": "changeset version",
 		"ci:release": "changeset publish",
 		"release": "changeset publish --no-git-checks",
-		"check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
+		"check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
+		"pb-types": "tsx sample/typegen.ts"
 	},
 	"dependencies": {
 		"commander": "^13.1.0"
@@ -46,6 +47,7 @@
 		"pocketbase": "^0.26.1",
 		"prettier": "^3.6.2",
 		"tsup": "^8.5.0",
+		"tsx": "^4.20.3",
 		"typescript": "^5.8.3",
 		"vitest": "^3.2.4"
 	}
