fix: update version to 0.1.2 and correct prerelease script syntax

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tigawanna/typed-pocketbase",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"description": "Add types to the PocketBase JavaScript SDK",
 	"author": "Tigawanna",
 	"repository": {
@@ -29,7 +29,7 @@
 		"ci:version": "changeset version",
 		"ci:release": "changeset publish",
 		"release": "changeset publish --no-git-checks",
-		"prerelease": "npm run build npm $$ run check-exports",
+		"prerelease": "npm run build && npm run check-exports",
 		"check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
 		"pb-types": "tsx sample/typegen.ts"
 	},
